BaronaExercise/force-app/main/default/objects/Job_Applicant__c/Job_Applicant__c.object-meta.xml
<CustomObject>
    <label>Job Applicant</label>
    <nameField>
        <label>Job Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>