BaronaExercise/force-app/main/default/objects/Job_Applicant__c/fields/Job_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_Email__c</fullName>
    <label>Job Applicant Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>