BaronaExercise/force-app/main/default/objects/Job_Applicant__c/fields/Job_Request__c.field-meta.xml
<CustomField>
    <fullName>Job_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Request</label>
    <referenceTo>Job_Request__c</referenceTo>
    <relationshipLabel>Job Applicants</relationshipLabel>
    <relationshipName>Job_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>